--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,16 +1,30 @@
 \chapter{Conclusions}
 \label{chap:conclusions}
-
 \minitoc \mtcskip \noindent
 
+\section{Difficulties}
+%IMPORTANT
+%Maybe move to the approach
+Mention the initial thing we wanted to do: to use some metrics to compare our implementation with others from the state of the art.
+Mention why we could not do it: NO ONE ANSWERED WITH THE METRICS :( Contacts did not go through as expected!
+
+\section{}
+
+% Nao ha grande baseline para comparar; há que restringir o ambito e o estudo foi feito para ser baseado nestas consideraçoes; 
+
 %These conclusions are for PDIS; so they will close this delivery and may anticipate the expected results of the dissertation. Include the tasks and a Gantt diagram with the plan.
-The dissertation focuses on finding out how applicable blockchain is to the supply chain industry and to SCM, and there are many variables to consider. Many companies have already started working on projects similar to what is trying to be accomplished here, though with a higher focus on financial benefits than on the research itself (many of the examples given were of companies using Ethereum and its tokens). These solutions have not yet been proved and are also taking their initial steps. The main focus of this dissertation is to develop a proof-of-concept that indeed blockchain can improve SCM in some form, and also give an insight on how this might be achieved. 
+The dissertation focuses on finding out how applicable Blockchain is to the supply chain industry and to SCM, and there are many variables to consider. Many companies have already started working on projects similar to what is trying to be accomplished here, though with a higher focus on financial benefits than on the research itself (many of the examples given were of companies using Ethereum and its tokens). These solutions have not yet been proved and are also taking their initial steps. The main focus of this dissertation is to develop a proof-of-concept that indeed Blockchain can improve SCM in some form, and also give an insight on how this might be achieved. 
 
 \section{Future Work}
 
-The research for this dissertation is divided into six steps, described in Table \ref{table:gantt_chart} and illustrated by Figure \ref{fig:gantt_chart}. The research started with the literature review, which presents some important insights, frameworks as well as some important design aspects and decisions to take while developing a model for a blockchain-driven supply chain project.
+%Nao usar situaçoes hipoteticas
+%USAR OUTRAS FERRAMENTAS
+%COMPARAR COM CLOUD E OUTRAS ARQUITETURAS
+%VALIDAR PROTOTIPO COM PESSOAS REAIS
 
-These aspects will be taken into account for the next steps. First, adapting and creating a blockchain integration model, by making some decisions on the design and frameworks to be used. Then, a small integration project will be built based on this model.
+The research for this dissertation is divided into six steps, described in Table \ref{table:gantt_chart} and illustrated by Figure \ref{fig:gantt_chart}. The research started with the literature review, which presents some important insights, frameworks as well as some important design aspects and decisions to take while developing a model for a Blockchain-driven supply chain project.
+
+These aspects will be taken into account for the next steps. First, adapting and creating a Blockchain integration model, by making some decisions on the design and frameworks to be used. Then, a small integration project will be built based on this model.
 
 In the final part of the project, its applicability and performance will be evaluated. The developed system itself is a proof-of-concept, which, already proves that such a concept might work, but it is important to measure how it fares against the traditional systems used in supply chain. This evaluation is done in two different parts: the first consists on evaluating functionality, and checking which functionalities are added or subtracted by using blockchain; the second part consists in using performance metrics to evaluate this dissertation's solution against the baseline of a traditional solution, like a centralized system. The metrics used to evaluate this include, but are not limited to:
 \begin{itemize}
