--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,9 @@
+%\chapter{Introduction1}
+%\minitoc \mtcskip \noindent
+%\chapter{Introduction2}
+%\minitoc \mtcskip \noindent
 \chapter{Introduction}
 \label{chap:introduction}
-
 \minitoc \mtcskip \noindent
 
 Consumer demand is growing more than ever, and with it, concerns are raised as to whether the demand can be met in a transparent and trustful way. It is difficult to know where the products we consume come from, and the processes they go through. This leads to the need of transparency in the supply chains as well as the need of an increase in their efficiency, if they are to conform to the market's needs.
@@ -42,6 +45,7 @@ And this is where SCM shines and shows just how useful it can be. Managing all t
 SCM diminishes the impact of such disruptions, and actively works to avoid or diminish them, while optimizing the way the supply chain works. This is why SCM is such an important discipline, that we have to better understand and improve, with all the means that we can, and this includes, of course, technologies like the blockchain.
 
 \section{Challenges}
+\label{supply_chain_challenges}
 
  Having already introduced the concepts of Supply Chain and SCM, it is now possible to briefly introduce some of the problems that affect them.
 
