--- a/references.bib
+++ b/references.bib
@@ -414,6 +414,32 @@ title = {{Corda: An Introduction}},
 year = {2016}
 }
 
+@misc{ComposerIntro,
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/19475029cfbb4ccee538701bb23b0bfdaa4d9735.html:html},
+title = {{Introduction @ hyperledger.github.io}},
+url = {https://hyperledger.github.io/composer/latest/introduction/introduction.html},
+urldate = {2018-05-31},
+year = {2018}
+}
+
+@misc{AmbrosusTechno,
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/9562c255e7f38e46bb76b390f21c3402a4273a7f.html:html},
+title = {{Technology @ ambrosus.com}},
+url = {https://ambrosus.com/technology/},
+urldate = {07/06/2018},
+year = {2018}
+}
+
+@misc{OriginTrailTechno,
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/33688d12d249439f3543b5429b85987e27e15775.html:html},
+title = {{Technology @ origintrail.io}},
+url = {https://origintrail.io/technology},
+urldate = {07/06/2018},
+year = {2018}
+}
+
+
+
 @article{Panayides2009,
 abstract = {Trust is identified as a significant predictor of positive performance in business relationships. On the premise that the effects of trust have not been given the deserved scholarly attention in the supply chain context, this paper investigates the effects of trust on innovativeness and supply chain performance. The hypothesised model is operationalised with survey data and analysed using structural equation modelling. The findings add credence to the positive effects of trust and identify trust and innovativeness as antecedents to higher performance in the supply chain. {\textcopyright} 2009 Elsevier B.V. All rights reserved.},
 author = {Panayides, Photis M. and {Venus Lun}, Y. H.},
