--- a/thesis.tex
+++ b/thesis.tex
@@ -102,7 +102,6 @@
 		\input{00-dedication}
 		\clearpage
 		{\centering \emph{This page was intentionally left blank.} \\ }
-		\dominitoc
 		\cleardoublepage
 		\pagenumbering{roman}
 		\pagestyle{fancy}
@@ -128,9 +127,9 @@
     \include{blockchain}
     \include{blockchainframeworks}
     \include{blockchainapplicability}
-	%\include{problem}
-	%\include{contribution1}
-	%\include{contribution2}
+	\include{problemstatement}
+	\include{survey}
+	\include{prototype}
 	%\include{validation}
 	\include{conclusions}
 
